--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,8 @@
     }
   ],
   "start_url": "/",
-  "background_color": "#3367D6",
+  "background_color": "#191c1b",
   "display": "standalone",
-  "theme_color": "#3367D6",
+  "theme_color": "#59dbc1",
   "description": "Sea of Thieves Cooking Timer -- cook yo shit"
 }
