background color update

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,6 @@
   "start_url": "/",
   "background_color": "#191c1b",
   "display": "standalone",
-  "theme_color": "#59dbc1",
+  "theme_color": "#005144",
   "description": "Sea of Thieves Cooking Timer -- cook yo shit"
 }
